--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -7,15 +7,15 @@
     border: 5px solid black;
     position: relative;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
-  }
-  
-  .profile-picture .profile-img {
+}
+
+.profile-picture .profile-img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-  }
-  
-  .profile-picture::before {
+}
+
+.profile-picture::before {
     content: "";
     display: block;
     position: absolute;
@@ -25,14 +25,58 @@
     height: 100%;
     z-index: -1;
     background: rgba(0, 0, 0, 0.5);
-  }
-  
-  .speech-bubble {
+}
+
+.speech-bubble {
     background-color: #f5f5f5;
     border-radius: 10px;
     padding: 20px;
     margin-top: 20px;
-  }
+}
 
-  
-  
+.project {
+    position: relative;
+    overflow: hidden;
+    border: 1px solid #ccc;
+}
+
+.project img {
+    transition: transform 0.5s;
+}
+
+.project:hover img {
+    transform: scale(1.1);
+}
+
+.overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    overflow: hidden;
+    width: 100%;
+    height: 0;
+    transition: height 0.5s ease;
+}
+
+.project:hover .overlay {
+    height: 100%;
+}
+
+.text {
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.text a {
+    display: block;
+    margin: 10px;
+    font-size: 16px;
+}
