--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -80,3 +80,16 @@
     margin: 10px;
     font-size: 16px;
 }
+
+.animated-bg {
+    background: linear-gradient(to bottom, #ff7f50 0%, #ff4b2b 50%, #ff416c 100%);
+    height: 100vh;
+  }
+
+
+
+
+.image-layer {
+    position: relative;
+    z-index: 1;
+}
